fix app otpion overflow

--- a/packages/frontend/app/components/Modal/Modal.module.css
+++ b/packages/frontend/app/components/Modal/Modal.module.css
@@ -132,6 +132,8 @@
     /* padding: 0 16px 16px 16px; */
     /* Ensure adequate space for form elements */
     /* padding-bottom: 16px; */
+
+   
 }
 
 /* Add a spacer at the bottom to ensure content isn't hidden */
@@ -164,7 +166,7 @@
     box-shadow: 0px 0px 40px 0px rgba(6, 6, 12, 0.5);
     max-width: 90vw;
     max-height: 90dvh; /* Dynamic viewport height */
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 
 /* Input element styling inside modal */
